# second_brain

./: .env.example  .eval_log  .gitignore  AGENTS-ADDENDUM.md  AGENTS.md  OPEN BRAIN -- CREDENTIAL TRACKER.txt  PROJECT_GEN_PROMPT.md  README.md  pyproject.toml
.github/: copilot-instructions.md
_bmad-output/implementation-artifacts/: tech-spec-second-brain-mvp-capture-recall.md
_bmad-output/planning-artifacts/: user-journey-map.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_memory/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
docs/: PRD-SUPPLEMENTAL.md  UPGRADE_ROADMAP.md  USER_JOURNEYS.md  UX-AUGMENTATION.md  UX-COMPONENTS.md
scripts/: eval_harness.py  seed_strategy_demo.py
src/: config.py  main.py
src/api/: deps.py  routes.py
src/classification/: classifier-instructions-meta.md  classifier.py  provider.py
src/core/: entity_resolution.py  evaluation.py  example_datasets.py  exceptions.py  graph.py  pipeline.py  simulation.py  suggestions.py  summarization.py
src/models/: __init__.py  brain_entry.py  enums.py  strategy.py
src/retrieval/: keyword_search.py  recall.py  search.py  vector_store.py
src/slack/: collector.py  commands.py
src/storage/: database.py  (+2 more)
tests/: conftest.py  test_classification.py  test_enhanced_retrieval.py  test_entity_resolution.py  test_graph.py  test_models.py  test_pipeline.py  test_retrieval.py  test_semantic_matching.py  test_slack_commands.py  test_storage.py  test_strategy.py  test_suggestions.py  test_summarization.py
(+43 files in other folders)
